# Skillbox

./: Readme.md
cpp/cpp_mod10_hello/: README.md  main.cpp
cpp/cpp_mod10_pw1/: TaskDescription.md  main.cpp  task description.txt
cpp/cpp_mod11_pw1/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod11_pw2/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod11_pw3/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod11_pw4/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod12_pw1/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod12_pw2/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod12_pw3/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod12_pw4/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod13_pw1/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod13_pw2/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod13_pw3/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod14_pw1/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod14_pw2/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod14_pw3/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod14_pw4/: TaskDescription.md  TaskDescription.rtf  TaskDescription.txt  main.cpp
cpp/cpp_mod14_pw5/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod14_pw6/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod14_pw7/: TaskDescription.md  TaskDescription.rtf  TaskDescription.txt  main.cpp
cpp/cpp_mod14_pw8/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod15_pw1/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod15_pw2/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod15_pw3/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod15_pw4/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod16_pw1/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod16_pw2/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod16_pw3/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod16_pw4/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod16_pw5/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod17_pw1/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod17_pw2/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod17_pw3/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod18_pw1/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod18_pw2/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod18_pw3/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod18_pw4/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod19_pw1/: TaskDescription.md  TaskDescription.txt  main.cpp  words.txt
cpp/cpp_mod19_pw2/: TaskDescription.md  TaskDescription.txt  main.cpp  testfile.txt
cpp/cpp_mod19_pw3/: TaskDescription.md  TaskDescription.txt  main.cpp  paymentStatement.txt
cpp/cpp_mod19_pw4/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod19_pw5/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod20_pw1/: TaskDescription.md  TaskDescription.txt  main.cpp  paymentStatement.txt
cpp/cpp_mod20_pw2/: TaskDescription.md  TaskDescription.txt  main.cpp  pic.txt
cpp/cpp_mod20_pw3/: TaskDescription.md  TaskDescription.txt  basket.txt  main.cpp  river.txt
cpp/cpp_mod20_pw4/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod21_pw1/: TaskDescription.md  TaskDescription.txt  main.cpp  paymentStatement.txt
cpp/cpp_mod21_pw2/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod21_pw3/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod21_pw4/: TaskDescription.md  TaskDescription.txt  main.cpp  utf8_to_ascii.cpp  utf8_to_ascii.h
cpp/cpp_mod22_pw1/: TaskDescription.md  TaskDescription.txt  main.cpp
cpp/cpp_mod22_pw2/: TaskDescription.md  TaskDescription.txt  (+1 more)
cpp/cpp_mod25_pw1/: CMakeLists.txt  TaskDescription.md  TaskDescription.txt
cpp/cpp_mod25_pw1/include/: main.h
cpp/cpp_mod25_pw1/src/: CMakeLists.txt  main.cpp
cpp/cpp_mod25_pw2/: CMakeLists.txt  TaskDescription.md  TaskDescription.txt
cpp/cpp_mod25_pw2/inc/: cpu.h  disk.h  ram.h
cpp/cpp_mod25_pw2/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
cpp/cpp_mod30_pw1/: CMakeLists.txt  TaskDescription.md  main.cpp
cpp/cpp_mod31_pw3/: CMakeLists.txt  TaskDescription.md
cpp/cpp_mod31_pw3/inc/: IGraph.h  ListGraph.h  MatrixGraph.h
cpp/cpp_mod31_pw3/src/: CMakeLists.txt  ListGraph.cpp  MatrixGraph.cpp  main.cpp
cpp/cpp_mod34_pw1/: CMakeLists.txt  TaskDescription.md
cpp/cpp_mod38_pw1/: CMakeLists.txt  MagicButton.cpp  MagicButton.h  TaskDescription.md  btn_down.drawio  btn_up.drawio  main.cpp
cpp/cpp_mod38_pw2/: CMakeLists.txt  TaskDescription.md  example.html  main.cpp
(+144 files in other folders)
